# courthouse-rfid-tracker

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: DEPLOYMENT.md
docs/diagrams/: architecture.mermaid  database_schema.mermaid  event_flow.mermaid  rssi_resolution.mermaid
infrastructure/docker/: Dockerfile.gateway  docker-compose.yml
infrastructure/terraform/environments/dev/: main.tf
scripts/: seed_files.py  seed_readers.py  simulate_readers.py
src/cloud/handlers/: event_processor.py  health_monitor.py  location_api.py
src/cloud/models/: location.py  reader.py
src/cloud/utils/: config.py  db.py  rssi_resolver.py
src/dashboard/: index.html  package.json
src/dashboard/src/: App.jsx
src/dashboard/src/components/: FileSearch.jsx  FloorMap.jsx  LiveFeed.jsx  MovementTimeline.jsx  ReaderStatus.jsx
src/dashboard/src/hooks/: useWebSocket.js
src/gateway/: config.yaml  deduplicator.py  gateway.py  mqtt_publisher.py  reader_interface.py
tests/integration/: test_gateway_to_cloud.py
tests/load/: artillery_config.yml
tests/unit/: test_deduplicator.py  test_rssi_resolver.py
